# firecrawl-skills

./: .gitignore  CONVENTIONS.md  README.md  TODO.md  main.py  ofe.json  pyproject.toml  run
src/: firecrawl.py  schemas.py  scratch.py  utility.py
