[project]
name = "firecrawl-skills"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "firecrawl-py>=2.7.1",
    "ipdb>=0.13.13",
    "ipython>=9.2.0",
    "pydantic>=2.11.5",
    "python-dotenv>=1.1.0",
    "typing>=3.10.0.0",
]
